--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@ body{
     height: 360px;
     margin: 30px auto;
     overflow: hidden;
+    position: relative;
 }
 
 .banner{
@@ -31,6 +32,7 @@ body{
     height: 360px;
     position: absolute;
     background-repeat: no-repeat;
+    /* display: none; */
    
 }
 
@@ -44,4 +46,29 @@ body{
 
 .slide3{
     background-image: url("../img/three.png");
+}
+
+
+.button{
+    width: 50px;
+    height: 50px;
+    left: 200px;
+    top: 50%;
+    margin-top: -25px;
+    background: url(../img/arrow.png)  no-repeat center center;
+    position: absolute;
+}
+
+.button:hover{
+    background-color: grey;
+    opacity: 0.8;
+}
+
+.prev{
+    transform: rotate(180deg);
+}
+.next{
+    left: auto;
+    right: 0;
+    
 }
