--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,3 +72,27 @@ body{
     right: 0;
     
 }
+
+.dots{
+    position: absolute;
+    right: 10px;
+    bottom: 24px;
+    text-align: right;
+}
+
+.dots span{
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background: rgba(7, 17,24, 0.4);
+    box-shadow: 0 0 0 2px rgba(10, 226, 93, 0.541);
+    border-radius: 50%;
+    margin-left: 8px;
+    cursor: pointer;
+   
+}
+
+.dots span.active{
+    box-shadow:  0 0 0 2px rgba(7, 17,24, 0.4);
+     background: black;
+}
