*style.css *view.html
sub-menu postion done

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,3 +145,15 @@ a:link,a:visited{
     padding-left: 8px;
 
 }
+
+
+.sub-menu{
+    width: 500px;
+    height: 358px;
+    background: white;
+    z-index: 999;
+    position: absolute;
+    left: 200px;
+    top: 0;
+    border: 1px solid black;
+}
