--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,3 +157,9 @@ a:link,a:visited{
     top: 0;
     border: 1px solid black;
 }
+
+.inner-box{
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/menu.png);
+}
