--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,6 +126,7 @@ body {
 
 a:link,a:visited{
     text-decoration: none;
+    color:black;
 }
 
 .menu-item{
@@ -162,4 +163,34 @@ a:link,a:visited{
     width: 100%;
     height: 100%;
     background-image: url(../img/menu.png);
+    display: none;
+}
+
+.sub-inner-box{
+    width: 500px;
+    margin-left: 20px;
+    overflow: hidden;
+}
+
+.title{
+    font-size: 16px;
+    color: red;
+    margin:30px 0 30px 0;
+    font-weight: bold;
+}
+
+.sub-row{
+    margin-bottom: 20px;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.mr10{
+    margin-right: 10px;
+}
+
+.hide{
+    display: none;
 }
